--- a/index.html
+++ b/index.html
@@ -14,12 +14,95 @@
             cursor: pointer;
             margin-right: 10px; // 添加间距以便按钮不重叠
         }
+      
+        .menu-bar {
+            width: 100%;
+            background-color: #ccc;
+            height: 50px; // 调整高度以适应顶部菜单栏
+            position: fixed;
+            top: 0;
+            left: 0;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start; // 修改为 flex-start 以便按钮靠左排列
+            padding: 0 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .content-area {
+            display: flex;
+            height: 100vh; // 修改为 100vh 以占据整个视口高度
+        }
+
+        .main-content {
+            flex-grow: 1;
+            padding: 20px;
+            background-color: #fff;
+            overflow-y: auto; // 添加滚动条以便内容过多时可以滚动
+        }
+
+        .resizer {
+            width: 5px;
+            background: #ccc;
+            cursor: ew-resize;
+            user-select: none;
+        }
+
+        .resizer:hover {
+            background: #aaa;
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to My Electron App</h1>
-
+    <div class="menu-bar">
+        <button>按钮1</button>
+        <button>按钮2</button>
+        <button>按钮3</button>
+        <button>按钮4</button>
+        <button>按钮5</button>
+        <button>按钮6</button>
+    </div>
+    <div class="content-area">
+        <div class="sidebar" id="sidebar">
+            <!-- 列表1的内容 -->
+            <ul>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+            </ul>
+        </div>
+        <div class="resizer" id="resizer"></div>
+        <div class="main-content" id="main-content">
+            <!-- 内容区1的内容 -->
+            <p>这里是主要内容区域。</p>
+        </div>
+    </div>
     <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const sidebar = document.getElementById('sidebar');
+            const resizer = document.getElementById('resizer');
+            const mainContent = document.getElementById('main-content');
+
+            let startX, startWidth;
+
+            resizer.addEventListener('mousedown', (e) => {
+                startX = e.pageX;
+                startWidth = sidebar.offsetWidth;
+                document.addEventListener('mousemove', resize);
+                document.addEventListener('mouseup', stopResize);
+            });
+
+            function resize(e) {
+                sidebar.style.width = `${startWidth + e.pageX - startX}px`;
+                mainContent.style.width = `calc(100% - ${startWidth + e.pageX - startX}px)`;
+            }
+
+            function stopResize() {
+                document.removeEventListener('mousemove', resize);
+                document.removeEventListener('mouseup', stopResize);
+            }
+        });
     </script>
 </body>
 </html>
