增加 win 包生成脚本

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         <select id="port-select" placeholder="请选择端口">
             <option label="80" value="80"></option>
             <option label="443" value="443"></option>
+            <option label="USB" value="443"></option>
         </select>
-        <button id="connect-button">关闭端口</button>
+        <button id="connect-button">打开端口</button>
         <span>连接成功</span>
     </div>
     <div class="content-area">
